--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,6 @@
 <string name="ok_button">OK</string>
 <string name="cancel_button">Cancel</string>
 <string name="settings_button">Settings</string>
+<string name="menu_settings">Settings</string>
+<string name="share_track_title">Share Track</string>
 </resources>
