--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,6 @@
 <string name="settings_button">Settings</string>
 <string name="menu_settings">Settings</string>
 <string name="share_track_title">Share Track</string>
+<string name="menu_about">About</string>
+<string name="about_title">About</string>
 </resources>
