--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,8 @@
 <string name="share_track_title">Share Track</string>
 <string name="menu_about">About</string>
 <string name="about_title">About</string>
+<string name="station_spinner_prompt">Select station type</string>
+<string name="version">version 0.8.0 (alpha)</string>
+<string name="username">Username</string>
+<string name="password">Password</string>
 </resources>
