--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, LastFMPlayer</string>
-    <string name="app_name">LastFMPlayer</string>
-<string name="local_service_connected">Local service connected</string>
+    <string name="app_name">aLastFM Player</string>
+<string name="local_service_connected">Service connected</string>
 <string name="local_service_disconnected">Local service disconnected</string>
 <string name="alert_dialog_single_choice">Error</string>
 <string name="alert_dialog_ok">OK</string>
@@ -15,7 +15,11 @@
 <string name="menu_about">About</string>
 <string name="about_title">About</string>
 <string name="station_spinner_prompt">Select station type</string>
-<string name="version">version 0.8.0 (alpha)</string>
+
 <string name="username">Username</string>
 <string name="password">Password</string>
+<string name="signup">Don't have a last.fm username? Register at http://last.fm/join</string>
+<string name="track_loved">Track loved</string>
+<string name="track_banned">Track banned</string>
+<string name="track_shared">Track shared</string>
 </resources>
